refactor(events): adjust documentation api
